@@ -1,3 +1,9 @@
+2019-12-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Improve <<, part of RFE #641.
+
 2019-12-10 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/literalop.c:
